--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "muicss": " ^0.9.16",
+    "mui": "^0.0.1",
+    "react-buttons": "^0.0.11",
+    "react-addons-pure-render-mixin": "^15.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
