--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-buttons": "^0.0.11",
-    "react-alert":"^2.0.1"
+    "react-alert":"^2.0.1",
+    "react-scrollable-list":"^1.1.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
