--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "react-dom": "^15.5.4",
     "react-buttons": "^0.0.11",
     "react-alert":"^2.0.1",
-    "react-scrollable-list":"^1.1.3"
+    "react-scrollable-list":"^1.1.3",
+    "react-redux":"^5.0.4",
+    "redux":"^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "redux-logger": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
